The full lifecycle of custom challange

--- a/aws-cognito-desktop-client/App.config
+++ b/aws-cognito-desktop-client/App.config
@@ -5,6 +5,6 @@
   </startup>
   <appSettings>
     <add key="AWSRegion" value="us-east-2"/>
-    <add key="AWSProfileName" value="personal"/>
+    <add key="AWSProfileName" value="default"/>
   </appSettings>
 </configuration>
