--- a/aws-cognito-desktop-client/App.config
+++ b/aws-cognito-desktop-client/App.config
@@ -4,7 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <appSettings>
-    <add key="AWSRegion" value="us-east-2"/>
     <add key="AWSProfileName" value="default"/>
+    
+    <add key="POOL_id" value=""/>
+    <add key="CLIENT_id" value=""/>
   </appSettings>
 </configuration>
